Bug 379469 - Can not set the wallpaper by drag and drop the image from Google Chrome / FF to the desktop
Summary: Can not set the wallpaper by drag and drop the image from Google Chrome / FF ...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Containment (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Sebastian Kügler
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-03 08:41 UTC by trmdi
Modified: 2020-01-15 17:52 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.18.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description trmdi 2017-05-03 08:41:07 UTC
*** Steps to reproduce:

1, Open a wallpaper website in Google Chrome or Firefox.
For example: https://alpha.wallhaven.cc/wallpaper/503877 or https://wallpapers.wallhaven.cc/wallpapers/full/wallhaven-503877.png

2, Drag and drop the image to the desktop and choose: Wallpaper / Image from the context menu

*** Expected Result:
- The desktop wallpaper CHANGES to that image IMMEDIATELY.

*** Actual Result:
- Nothing changes, the desktop wallpaper DOES NOT change.


I'm using: KDE Plasma Version: 5.9.4, KDE Frameworks Version: 5.33.0, Qt Version: 5.8.0, all the other things are up to date on Manjaro KDE.
Comment 1 Kai Uwe Broulik 2017-05-29 12:19:53 UTC
Just prints the following error on console and after a restart the background is black.

kf5.kio.core: Invalid URL: QUrl("/home/foo/.local/sharewallpapers//wallpapers/full/wallhaven-503877.png")

Even if we did fix this, we should probably first download the image to some cache folder and use that one.
Comment 2 Alexander Mentyu 2017-12-07 13:48:23 UTC
Can confirm this bug in:

Distribution: KDE neon Developer Edition - Stable Branches
Plasma: 5.11.4
Frameworks: 5.41.0
Qt: 5.9.3
Kernel 4.10.0-40-generic
Type: 64-bit

Yet after system restart screen isn't black
Comment 3 trmdi 2020-01-15 17:24:17 UTC
Git commit 2212a9af156b667455aeea31ab59e073fa3a515d by Tranter Madi.
Committed on 15/01/2020 at 17:24.
Pushed by trmdi into branch 'master'.

Fix wallpaper destination path

Summary:
- Correct the destination path when downloading images.
- Switch from FileCopyJob to CopyJob to allow showing file overwrite dialog.

Test Plan: Drop files from Firefox to the desktop to set the wallpaper successfully.

Reviewers: #plasma, mart, ngraham

Reviewed By: #plasma, mart, ngraham

Subscribers: mart, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26525

M  +8    -5    wallpapers/image/image.cpp

https://commits.kde.org/plasma-workspace/2212a9af156b667455aeea31ab59e073fa3a515d