Fix wallpaper destination path

Summary:
- Correct the destination path when downloading images.
- Switch from FileCopyJob to CopyJob to allow showing file overwrite dialog.

BUG: 379469

Test Plan: Drop files from Firefox to the desktop to set the wallpaper successfully.

Reviewers: #plasma, mart, ngraham

Reviewed By: #plasma, mart, ngraham

Subscribers: mart, plasma-devel

Tags: #plasma

Differential Revision: https://phabricator.kde.org/D26525